--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 defusedxml==0.6.0
 Django==3.1
+django-allauth==0.42.0
 django-cors-headers==3.4.0
 django-rest-auth==0.9.5
 djangorestframework==3.11.1
