Added Postgres, Graphene

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
+# Django settings
 DJANGO_SUPERUSER_EMAIL=<email>
 DJANGO_SUPERUSER_FIRST_NAME=<first name>
 DJANGO_SUPERUSER_LAST_NAME=<last name>
 DJANGO_SUPERUSER_PASSWORD=<password>
+
+# Postgres settings
+POSTGRES_HOST=<host>
+POSTGRES_DB_NAME=<name>
+POSTGRES_DB_USER=<user>
+POSTGRES_DB_PASSWORD=<password>
+POSTGRES_DB_PORT=<port>
