--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aniso8601==7.0.0
 appdirs==1.4.4
 asgiref==3.2.10
 attrs==20.1.0
@@ -12,10 +13,15 @@ dj-rest-auth==1.1.1
 Django==3.1
 django-allauth==0.42.0
 django-cors-headers==3.4.0
+django-extensions==3.0.9
 djangorestframework==3.11.1
 djangorestframework-camel-case==1.2.0
 djangorestframework-simplejwt==4.4.0
 flake8==3.8.3
+graphene==2.1.8
+graphene-django==2.13.0
+graphql-core==2.3.2
+graphql-relay==2.0.1
 idna==2.10
 importlib-metadata==1.7.0
 isort==5.4.2
@@ -26,6 +32,8 @@ mccabe==0.6.1
 oauthlib==3.1.0
 openapi-codec==1.3.2
 pathspec==0.8.0
+promise==2.3
+psycopg2-binary==2.8.6
 pycodestyle==2.6.0
 pyflakes==2.2.0
 PyJWT==1.7.1
@@ -35,11 +43,14 @@ PyYAML==5.3.1
 regex==2020.7.14
 requests==2.24.0
 requests-oauthlib==1.3.0
+Rx==1.6.1
 simplejson==3.17.2
+singledispatch==3.4.0.3
 six==1.15.0
 sqlparse==0.3.1
 toml==0.10.1
 typed-ast==1.4.1
+Unidecode==1.1.1
 uritemplate==3.0.1
 urllib3==1.25.10
 zipp==3.1.0
